[gd_scene load_steps=13 format=1]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/player_bullet.tscn" type="PackedScene" id=2]
[ext_resource path="res://art/sheet.playerShip2_orange.atex" type="Texture" id=3]
[ext_resource path="res://audio/laser1.wav" type="Sample" id=4]
[ext_resource path="res://audio/laser2.wav" type="Sample" id=5]
[ext_resource path="res://art/sheet.shield3.atex" type="Texture" id=6]
[ext_resource path="res://art/sheet.fire15.atex" type="Texture" id=7]
[ext_resource path="res://art/sheet.fire14.atex" type="Texture" id=8]
[ext_resource path="res://art/sheet.fire11.atex" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 26.2202

[sub_resource type="SampleLibrary" id=2]

samples/laser1 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 4 )
}
samples/laser2 = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="player" type="Area2D"]

transform/pos = Vector2( 527.166, 290.716 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 5 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
bullet = ExtResource( 2 )

[node name="ship" type="Sprite" parent="."]

transform/scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 3 )

[node name="collision" type="CollisionShape2D" parent="."]

transform/pos = Vector2( 0, 5 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="bullet_container" type="Node" parent="."]

[node name="muzzle" type="Position2D" parent="."]

transform/pos = Vector2( 0, -50 )

[node name="gun_timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = true
autostart = false

[node name="shoot_sounds" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 2 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="shield" type="Sprite" parent="."]

transform/scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )

[node name="exhaust" type="AnimatedSprite" parent="."]

transform/pos = Vector2( 0, 35 )
frames = SubResource( 3 )
animation = "default"
playing = true

[connection signal="body_enter" from="." to="." method="_on_player_body_enter"]


